<resources>
    <string name="app_name">ComRoute</string>
    <string name="content_desc_">Splash_Screen\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="login_in">Login In</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="todo">TODO</string>
    <string name="are_you_new_user_register">Are you new user? register</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_key">AIzaSyBn9Qfi7SqyfaIoRTFEXyEJLIuk2OfUx1M</string>

    <string name="theme">Theme</string>
    <string name="currency">Currency</string>
    <string name="distance_unit">Distance Unit</string>
    <string name="notifications">Notifications</string>
    <string name="offers">Offers</string>
    <string name="language">Language</string>
    <string name="email_verification">Email Verification</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="select_option">Select</string>
    <string name="google_places_api_key">AIzaSyBn9Qfi7SqyfaIoRTFEXyEJLIuk2OfUx1M</string>
    <string name="transport_image">transport_image\n</string>
    <string name="google_maps_api_key">AIzaSyBn9Qfi7SqyfaIoRTFEXyEJLIuk2OfUx1M</string>
    <string name="notification" />
    <string name="view_tutorial">view_tutorial</string>

</resources>