<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/signup_text_btn"
        android:layout_width="@dimen/_225sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:text="@string/are_you_new_user_register"
        android:textColor="#3b608c"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_sign_in_button" />


    <EditText
        android:id="@+id/email_inputfield_login"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:autofillHints=""
        android:drawableStart="@drawable/email"
        android:drawablePadding="@dimen/_15sdp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_back_title" />

    <EditText
        android:id="@+id/password_inputfield_login"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:autofillHints=""
        android:drawableStart="@drawable/password"
        android:drawablePadding="@dimen/_15sdp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_inputfield_login" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_126sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_116sdp"
        android:background="@drawable/main_button"
        android:contentDescription="TODO"
        android:text="@string/login_in"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_inputfield_login"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/login_header_img"
        android:layout_width="@dimen/_315sdp"
        android:layout_height="@dimen/_300sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login" />

    <TextView
        android:id="@+id/welcome_back_title"
        android:layout_width="@dimen/_215sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginStart="@dimen/_31sdp"
        android:layout_marginTop="@dimen/_255sdp"
        android:text="@string/welcome_back"
        android:textColor="#6072FF"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_header_img" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textAlignment="center"
        app:buttonSize="wide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>